--- a/locale/en/LC_MESSAGES/messages.po
+++ b/locale/en/LC_MESSAGES/messages.po
@@ -21,7 +21,7 @@ msgstr ""
 #, python-format
 msgid "Bravo ! Tu viens de proposer la %s ème mention du mot apéro ce mois-ci 🥳🍹"
 msgstr ""
-"Well done ! You've just done the %s mention of the word drink this month "
+"Well done! You've just provided the %s th mention of the word apéro this month"
 "🥳🍹"
 
 #: main.py:95
@@ -46,11 +46,11 @@ msgstr "Where is that happy hour!? 😅"
 
 #: main.py:100
 msgid "Vivement l'apéro du weekend de la Galaxie de l'Action ! 😁"
-msgstr "Can't wait for the Action Galaxy Weekend ! 😁"
+msgstr "Can't wait for the Galaxy of Action Weekend! 😁"
 
 #: main.py:101
 msgid "Pensez à préparer 2 mensonges et 1 vérité pour animer l'apéro 😉"
-msgstr "Think about preparing 2 lies and 1 truth to animate the happy hour 😉"
+msgstr "Think of preparing 2 lies and 1 truth to animate the happy hour 😉"
 
 #: main.py:102
 msgid "Et... Il y aura du Ricard à cet apéro ? 😍"
@@ -62,7 +62,7 @@ msgstr "Are you planning the cider too? (for the Bretons!)"
 
 #: main.py:104
 msgid "Apéro (nom masculin) : Du latin apertivus qui signifie ouvrir 🤓"
-msgstr "Aperitif (male name): Latin apertivus meaning open 🤓"
+msgstr "Aperitif (male noun): From the Latin apertivus meaning to open 🤓"
 
 #: main.py:105
 msgid "Euh... Vous avez prévenu <@!696086695283523604> de cet apéro ? 😱"
@@ -88,15 +88,15 @@ msgstr "Well then! Aren’t we waiting for Patrick? 😤"
 msgid ""
 "Un apéro? Il doit y avoir un chimiste dans le coin avec une solution, "
 "t'inquiète 😉 🍸"
-msgstr "Drinks? Call a chemist, he/she should have a solution ! 😉 🍸"
+msgstr "Drinks? Call a chemist, he/she should have a solution! 😉 🍸"
 
 #: main.py:111
 msgid ""
 "« Le tout-venant a été piraté par les mômes ! Qu'est-ce qu'on fait ? On "
 "se risque sur le bizarre ? »"
 msgstr ""
-"« The all-comer was hacked by the kids! What are we doing? Are we risking"
-" the weird? » [Uncertain translation 😅]"
+"‘The whole thing has been hacked by the kids! What do we do?"
+" Do we dare to go for the weird?’"
 
 #: main.py:112
 msgid "Vous avez sorti le vitriol ?"
@@ -112,7 +112,7 @@ msgstr ""
 
 #: main.py:114
 msgid "J'lui trouve un goût de pomme ? Y'en a !"
-msgstr "I think it tastes like apple? There is !"
+msgstr "I think it tastes like apple? It does!"
 
 #: main.py:115
 msgid "Il y a 2 choses qui gagnent à vieillir, le bon vin et les amis."
@@ -127,8 +127,7 @@ msgid ""
 "Quand mes amis me manquent, je fais comme pour les échalotes, je les fais"
 " revenir avec du vin blanc "
 msgstr ""
-"When I miss my friends, I do as for shallots, I make them come back with "
-"white wine"
+"When I miss my friends, I do as for shallots, I add white wine to them "
 
 #: main.py:118
 msgid ""
@@ -161,7 +160,7 @@ msgstr "a daiquiri, and everything is more pretty!"
 #: main.py:122
 msgid "Ceux qui cherchent midi à 14h ratent l'heure de l'apéro"
 msgstr ""
-"I'm not alcoholic, I only drink twice a year. When it's my birthday, and "
+"I'm not an alcoholic, I only drink twice a year. When it's my birthday, and "
 "when it's not my birthday."
 
 #: main.py:123
@@ -173,7 +172,7 @@ msgid ""
 "Quelqu'un sait à quelle page de la bible on trouve la recette pour "
 "changer l'eau en vin ? C'est pour un apéro ce soir 🙃"
 msgstr ""
-"Does anyone know on which page of the bible we find the recipe for "
+"Anyone know what page in the bible has the recipe for "
 "turning water into wine? It's for an aperitif tonight 🙃"
 
 #: main.py:127
@@ -198,7 +197,7 @@ msgstr "A glass bought, an otter saved"
 
 #: main.py:137
 msgid "Un verre acheté, un lama sauvé"
-msgstr "A glass bought, a saved lama"
+msgstr "A glass bought, a llama saved"
 
 #: main.py:138
 msgid "Venez à l'Apér'Agro, les Agros sont aussi chauds que le climat !"
@@ -238,7 +237,7 @@ msgstr "Oh I see beers around here 😁"
 
 #: main.py:152
 msgid "Tchin ! 🍻"
-msgstr "Cheers ! 🍻"
+msgstr "Cheers! 🍻"
 
 #: main.py:153
 msgid "Apéro ? 😄"
@@ -254,19 +253,19 @@ msgstr ""
 
 #: main.py:185
 msgid ""
-"une nouvelle planète !\n"
-"Voici donc la vidéo de présentation de cette planète ☺"
+"une nouvelle Planète !\n"
+"Voici donc la vidéo de présentation de cette Planète ☺"
 msgstr ""
-"a new planet!\n"
-"Here is the presentation video of this planet ☺"
+"a new Planet!\n"
+"Here is the presentation video of this Planet ☺"
 
 #: main.py:187
 msgid ""
 "de nouvelles planètes !\n"
-"Voici donc les vidéos de présentation de ces planètes ☺"
+"Voici donc les vidéos de présentation de ces Planètes ☺"
 msgstr ""
 "new planets!\n"
-"So here are the videos presenting these planets ☺"
+"So here are the videos presenting these Planets ☺"
 
 #: main.py:191
 #, python-format
